# HirakeGoma

./: .eslintrc.yml  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot_auto_approve.yml  dependabot_automerge.yml
.storybook/: main.cjs  preview.cjs
docs/: dev.md
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  main.rs  plugins.rs
src-tauri/src/core/: commands.rs  db.rs  setting.rs  ui.rs  utils.rs
src-tauri/src/core/commands/: core_command.rs  db_command.rs  main_command.rs  search_command.rs  search_db_command.rs  setting_command.rs  theme_command.rs
src-tauri/src/core/db/: applications_table.rs  commands.rs  commands_table.rs  db_command.rs  db_main_store.rs  db_store.rs  kv_store.rs  main_command.rs  main_table.rs  search_database_store.rs  setting_store.rs  setting_table_hotkey.rs  setting_table_theme.rs
src-tauri/src/core/setting/: theme.rs  theme_command.rs  theme_store.rs  theme_table.rs
src-tauri/src/core/utils/: parser.rs  path.rs  result.rs
src-tauri/src/plugins/: application_search.rs  plugin_store.rs
src-tauri/src/plugins/application_search/: command.rs  extract_icon_from_exe.ps1  parse_lnk.rs  parser.rs  table.rs
src-tauri/tests/database/search_database/: db
src-tauri/tests/scripts/: Pipfile  generate_fake_application_shortcuts.py  requirements.txt
src/@types/: SearchResult.d.ts  Theme.d.ts
src/commands/core/: coreOsGetName.ts  coreWindowHide.ts  coreWindowShow.ts  coreWindowToggleVisibility.ts  core_window_hide.ts  core_window_show.ts  core_window_toggle_visibility.ts  index.ts
src/commands/db/: dbClear.ts  dbGetAll.ts  dbPrintAll.ts
src/commands/main/: getAllSearchDatabaseApplicationItems.ts  search.ts
src/commands/setting/: index.ts  settingHotkeyChange.ts  settingHotkeyGet.ts  settingHotkeyGetAll.ts  settingHotkeyRemove.ts  settingHotkeySave.ts  settingHotkeyUpdate.ts  settingThemeActivate.ts  settingThemeChange.ts  settingThemeCreate.ts  settingThemeGetActivated.ts  settingThemeGetAll.ts  settingThemeRemove.ts  settingThemeSave.ts
src/components/main_window/: Form.tsx  InputBox.stories.tsx  InputBox.tsx  ResultList.stories.tsx  ResultList.tsx
src/components/setting_window/: Router.tsx
src/main_window/: App.tsx  ThemeManager.tsx  main.css  main.tsx
src/setting_window/: Theme.ts  setting.css  setting.html  setting.tsx
src/stories/: Button.stories.tsx  Header.stories.tsx  Header.tsx  Page.stories.tsx  Page.tsx
src/types/: Hotkey.d.ts  PluginAppsearchTable.ts  SearchDatabase.d.ts  SearchResult.d.ts  SearchResult.ts  Theme.d.ts  ThemeList.d.ts
(+106 files in other folders)
