[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "HirakeGoma"
repository = ""
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.4", features = []}

[dependencies]
anyhow = "1.0.64"
configparser = "3.0.1"
directories = "4.0.1"
fuzzy-matcher = "0.3.7"
kv = {version = "0.24", features = ["json-value"]}
lnk = "0.4.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7.0"
sled = "0.34.7"
tauri = {version = "1.0.4", features = ["api-all", "system-tray"]}
uuid = {version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}# not using
walkdir = "2.3.2"
window-shadows = "0.1.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
