[package]
authors = ["rai"]
description = "An Application Launcher"
edition = "2021"
license = ""
name = "HirakeGoma"
repository = ""
rust-version = "1.65"
version = "0.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0.66"
configparser = "3.0.2"
exe = "0.5.5"
directories = "4.0.1"
fuzzy-matcher = "0.3.7"
kv = {version = "0.24", features = ["json-value"] }
lnk = "0.4.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
sled = "0.34.7"
tauri = {version = "1.2.3", features = ["api-all", "macos-private-api", "system-tray", "wry"] }
thiserror = "1.0.37"
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }# not using
walkdir = "2.3.2"
window-shadows = "0.2.0"
tauri-runtime = "0.12.1"
window-vibrancy = {version = "0.3.2"}
log = "0.4.17"
chrono = "0.4.23"
powershell_script = "1.0.4"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
features = [ "colored" ]
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
